test/Thyroxine: added padding and background

--- a/css-sass/view/test/_base.scss
+++ b/css-sass/view/test/_base.scss
@@ -16,6 +16,10 @@
         margin-top: 10px;
         border-radius: 5px;
     }
+
+    .test-section-inner {
+        padding: 30px 30px 30px 75px;
+    }
 }
 
 .test-header {
