--- a/css-sass/view/widget/_test-overview.scss
+++ b/css-sass/view/widget/_test-overview.scss
@@ -1,7 +1,6 @@
 .view-widget-test-overview {
-    >.inner {
+    >.test-section-inner {
         color: white;
-        padding: 30px 30px 30px 75px;
     }
 
     .column {
