--- a/js/template/test/Thyroxine.html
+++ b/js/template/test/Thyroxine.html
@@ -1,10 +1,14 @@
 <div class="view-test-thyroxine">
     
-    <div class="yui3-g-r page-section">
-        <!-- test -->
-        <div class="yui3-u-1">
-            <div class="yui3-u-c">
-                <div class="subtest-container"></div>
+    <div class="test-section">
+        <div class="test-section-inner">
+            <div class="yui3-g-r">
+                <!-- test -->
+                <div class="yui3-u-1">
+                    <div class="yui3-u-c">
+                        <div class="subtest-container"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
