--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -1,6 +1,5 @@
 <div class="view-widget-test-overview">
-
-    <div class="inner">
+    <div class="test-section-inner">
         <div class="yui3-g-r">
             <!-- description -->
             <div class="yui3-u-1-2 section">
