--- a/js/template/subtest/Range.html
+++ b/js/template/subtest/Range.html
@@ -7,7 +7,6 @@
                     <div>
                         <span class="value">{{value}}</span>&nbsp;<span class="unit">{{unit}}</span>
                     </div>
-                    <div class="description">{{name}}’s Result</div>
                 </div>
                 <div class="pointer"></div>
             </div>
@@ -15,7 +14,8 @@
 
         <div class="actual">
             <div class="range">
-                <div class="value"></div>
+                <div class="bar value"></div>
+                <div class="bar expected-value"></div>
             </div>
         </div>
 
