--- a/js/template/test/HeartwormAntigen.html
+++ b/js/template/test/HeartwormAntigen.html
@@ -1,10 +1,14 @@
 <div class="view-test-heartworm">
     
-    <div class="yui3-g-r page-section test-section">
-        <!-- tests -->
-        <div class="yui3-u-1-4 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
-            <div class="yui3-u-c">
-                <div class="boolean-container"></div>
+    <div class="test-section">
+        <div class="test-section-inner">
+            <div class="yui3-g-r">
+                <!-- tests -->
+                <div class="yui3-u-1-4 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+                    <div class="yui3-u-c">
+                        <div class="boolean-container"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
