--- a/js/template/test/Accuplex.html
+++ b/js/template/test/Accuplex.html
@@ -1,28 +1,32 @@
 <div class="view-test-accuplex">
     
-	<div class="yui3-g-r page-section">
-        <!-- tests -->
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
+    <div class="test-section">
+        <div class="test-section-inner">
+        	<div class="yui3-g-r">
+                <!-- tests -->
+                <div class="yui3-u-1-2 yui3-u-1-small-tablet">
+                    <div class="yui3-g">
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
+                        </div>
+
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
+                <div class="yui3-u-1-2 yui3-u-1-small-tablet">
+                    <div class="yui3-g-r">
+                        <div class="yui3-u-13-24 yui3-u-1-2-small-tablet yui3-u-1-2-phone">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
