--- a/js/template/test/FelvFiv.html
+++ b/js/template/test/FelvFiv.html
@@ -1,18 +1,22 @@
 <div class="view-test-fiv">
     
-    <div class="yui3-g-r page-section test-section">
-        <!-- tests -->
-        <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-            <div class="yui3-g">
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
-                    </div>
-                </div>
+    <div class="test-section">
+        <div class="test-section-inner">
+            <div class="yui3-g-r">
+                <!-- tests -->
+                <div class="yui3-u-1-2 yui3-u-1-small-tablet">
+                    <div class="yui3-g">
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
+                        </div>
 
-                <div class="yui3-u-1-2">
-                    <div class="yui3-u-c">
-                        <div class="boolean-container"></div>
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
