--- a/js/template/test/OvaParasite.html
+++ b/js/template/test/OvaParasite.html
@@ -1,54 +1,56 @@
 <div class="view-test-ova">
     
     <div class="test-section">
-        <div class="yui3-g-r page-section">
-            <!-- tests -->
-            <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-                <div class="yui3-g">
-                    <div class="yui3-u-1-2">
-                        <div class="yui3-u-c">
-                            <div class="boolean-container"></div>
+        <div class="test-section-inner">
+            <div class="yui3-g-r">
+                <!-- tests -->
+                <div class="yui3-u-1-2 yui3-u-1-small-tablet">
+                    <div class="yui3-g">
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
+                        </div>
+
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
                         </div>
                     </div>
+                </div>
 
-                    <div class="yui3-u-1-2">
-                        <div class="yui3-u-c">
-                            <div class="boolean-container"></div>
+                <div class="yui3-u-1-2 yui3-u-1-small-tablet">
+                    <div class="yui3-g">
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
+                        </div>
+
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-                <div class="yui3-g">
-                    <div class="yui3-u-1-2">
-                        <div class="yui3-u-c">
-                            <div class="boolean-container"></div>
+            <div class="yui3-g-r">
+                <!-- tests -->
+                <div class="yui3-u-1-2 yui3-u-1-small-tablet">
+                    <div class="yui3-g">
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="yui3-u-1-2">
-                        <div class="yui3-u-c">
-                            <div class="boolean-container"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="yui3-g-r page-section">
-            <!-- tests -->
-            <div class="yui3-u-1-2 yui3-u-1-small-tablet">
-                <div class="yui3-g">
-                    <div class="yui3-u-1-2">
-                        <div class="yui3-u-c">
-                            <div class="boolean-container"></div>
-                        </div>
-                    </div>
-
-                    <div class="yui3-u-1-2">
-                        <div class="yui3-u-c">
-                            <div class="boolean-container"></div>
+                        <div class="yui3-u-1-2">
+                            <div class="yui3-u-c">
+                                <div class="boolean-container"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
