--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -3,18 +3,22 @@
         <div class="yui3-g-r">
             <!-- description -->
             <div class="yui3-u-1-2 section">
-                <div class="yui3-u-c column">
-                    <div class="inner">
-                        <div class="description">{{description}}&nbsp;<span class="widget-arrow"></span></div>
+                <div class="yui3-u-c">
+                    <div class="column">
+                        <div class="inner">
+                            <div class="description">{{description}}&nbsp;<span class="widget-arrow"></span></div>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <!-- diagram -->
             <div class="yui3-u-1-2 section">
-                <div class="yui3-u-c column diagram-container">
-                    <div class="inner">
-                        <img class="diagram" src="images/test/{{type}}/diagram-2x.png" />
+                <div class="yui3-u-c">
+                    <div class="column diagram-container">
+                        <div class="inner">
+                            <img class="diagram" src="images/test/{{type}}/diagram-2x.png" />
+                        </div>
                     </div>
                 </div>
             </div>
