--- a/js/template/test/CompleteBloodCount.html
+++ b/js/template/test/CompleteBloodCount.html
@@ -3,12 +3,13 @@
 
 	<!-- RBC -->
 	<div class="subsection subsection-rbc test-section">
-		<div class="page-section">
+		<div class="test-section-inner-with-icon">
 			<div class="yui3-g-r">
 				<!-- description -->
-				<div class="yui3-u-2-3">
+				<div class="yui3-u-19-24">
 					<div class="yui3-u-c">
-						<div class="subsection-description">
+						<div class="test-section-description">
+							<img class="icon" src="images/test/cbc/diagram/rbc-2x.png" alt="" />
 
 							<h1><span>Red Blood Cells (RBC)</span></h1>
 							<p>Red blood cells make up the majority of {{patient.name}}’s blood count. They power {{patient.name}}’s body, carrying oxygen from the lungs to all the other cells and tissues, where it’s then turned into energy.</p>
@@ -20,7 +21,16 @@
 			<div class="yui3-g-r">
 				<div class="yui3-u-1-2">
 					<div class="yui3-u-c">
-						<div class="chart"></div>
+						<div class="chart">
+							<div class="diagram"></div>
+							<div class="value">
+								<div class="percentage">
+									<span class="number"></span>
+									<span class="symbol">%</span>
+								</div>
+								<div class="text">of total cells</div>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -37,12 +47,13 @@
 
 	<!-- WBC -->
 	<div class="subsection subsection-wbc test-section">
-		<div class="page-section">
+		<div class="test-section-inner-with-icon">
 			<div class="yui3-g-r">
 				<!-- description -->
-				<div class="yui3-u-2-3">
+				<div class="yui3-u-19-24">
 					<div class="yui3-u-c">
-						<div class="subsection-description">
+						<div class="test-section-description">
+							<img class="icon" src="images/test/cbc/diagram/wbc-2x.png" alt="" />
 							<h1><span>White Blood Cells (WBC)</span></h1>
 							<p>White blood cells protect and defend {{patient.name}}’s body against "invaders" like viruses, bacteria and parasites. There are different kinds of white blood cells that specialize in fighting different kinds of invaders.</p>
 						</div>
@@ -53,7 +64,16 @@
 			<div class="yui3-g-r">
 				<div class="yui3-u-1-2">
 					<div class="yui3-u-c">
-						<div class="chart"></div>
+						<div class="chart">
+							<div class="diagram"></div>
+							<div class="value">
+								<div class="percentage">
+									<span class="number"></span>
+									<span class="symbol">%</span>
+								</div>
+								<div class="text">of total cells</div>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -70,28 +90,40 @@
 	
 	<!-- Platelets -->
 	<div class="page-section subsection subsection-platelet test-section">
-		<div class="yui3-g-r">
-			<!-- description -->
-			<div class="yui3-u-2-3">
-				<div class="yui3-u-c">
-					<div class="subsection-description">
-						<h1><span>Platelets</span></h1>
-						<p>Platelets are like natural bandages – they help the body heal. If {{patient.name}} is cut, platelets rush to the site and form a scab to stop the bleeding.</p>
+		<div class="test-section-inner-with-icon">
+			<div class="yui3-g-r">
+				<!-- description -->
+				<div class="yui3-u-19-24">
+					<div class="yui3-u-c">
+						<div class="test-section-description">
+							<img class="icon" src="images/test/cbc/diagram/platelet-2x.png" alt="" />
+							<h1><span>Platelets</span></h1>
+							<p>Platelets are like natural bandages – they help the body heal. If {{patient.name}} is cut, platelets rush to the site and form a scab to stop the bleeding.</p>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
-		<div class="yui3-g-r">
-			<div class="yui3-u-1-2">
-				<div class="yui3-u-c">
-					<div class="chart"></div>
+			<div class="yui3-g-r">
+				<div class="yui3-u-1-2">
+					<div class="yui3-u-c">
+						<div class="chart">
+							<div class="diagram"></div>
+							<div class="value">
+								<div class="percentage">
+									<span class="number"></span>
+									<span class="symbol">%</span>
+								</div>
+								<div class="text">of total cells</div>
+							</div>
+						</div>
+					</div>
 				</div>
-			</div>
 
-			<div class="yui3-u-1-2">
-				<div class="yui3-u-c">
-					<div class="range"></div>
+				<div class="yui3-u-1-2">
+					<div class="yui3-u-c">
+						<div class="range"></div>
+					</div>
 				</div>
 			</div>
 		</div>
