--- a/js/template/widget/TestSubsection.html
+++ b/js/template/widget/TestSubsection.html
@@ -1,4 +1,4 @@
-<div class="view-widget-test-subsection page-section">
+<div class="view-widget-test-subsection">
 
     <div class="header">
         <span class="title"><span class="widget-arrow"></span> {{title}}</span>
