--- a/css-sass/view/test/_cbc.scss
+++ b/css-sass/view/test/_cbc.scss
@@ -8,7 +8,6 @@
 
         .diagram {
             width: 230px;
-            margin: 0 auto;
         }
 
         .value {
@@ -16,7 +15,7 @@
             font-weight: bold;
 
             position: absolute;
-            right: 20px;
+            left: 150px;
             top: 80px;
 
             width: 130px;
