--- a/css-sass/view/subtest/_types-of-cell2.scss
+++ b/css-sass/view/subtest/_types-of-cell2.scss
@@ -11,17 +11,71 @@
 
 	.diagram {
 		margin-top: 10px;
+		position: relative;
+		height: 190px;
 	}
 
-	&.species-feline {
-		.canine {
-			display: none;
+	.icon {
+		width: image-width("../images/subtest/types-of-cell2/canine-defender-2x.png") / 2;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+
+	.circle {
+		display: block;
+		margin: 0 auto;
+
+		&.big {
+			width: image-width("../images/subtest/types-of-cell2/canine-circle-big-2x.png") / 2;
+			padding-top: 18px;
+		}
+		&.medium {
+			width: image-width("../images/subtest/types-of-cell2/canine-circle-medium-2x.png") / 2;
+			padding-top: 33px;
+		}
+		&.small {
+			width: image-width("../images/subtest/types-of-cell2/canine-circle-small-2x.png") / 2;
+			padding-top: 50px;
 		}
 	}
 
-	&.species-canine {
-		.feline {
-			display: none;
+	.percentage {
+		@include secondaryFont;
+		font-weight: bold;
+		letter-spacing: -1px;
+
+		position: absolute;
+		width: 100%;
+		top: 76px;
+
+		text-align: center;
+
+		.number {
+			font-size: 300%;
+			line-height: 100%;
+		}
+
+		.symbol {
+			font-size: 150%;
+			vertical-align: top;
+		}
+	}
+
+	.range {
+		.widget-indicator {
+			vertical-align: middle;
+		}
+
+		.text {
+			@include secondaryFont;
+			text-transform: uppercase;
+			font-weight: bold;
+
+			font-size: 85%;
+
+			display: inline-block;
+			padding-left: 10px;
 		}
 	}
 }
