UrineAnalysis: updated test section styles and icons

--- a/css-sass/view/test/_urine.scss
+++ b/css-sass/view/test/_urine.scss
@@ -2,8 +2,9 @@
 
 .view-test-urine-analysis {
     .test-section-description {
-        margin-top: 35px;
-        margin-bottom: 35px;
+        p {
+            margin-bottom: 0;
+        }
     }
 
     .visual-analysis {
