--- a/js/template/test/UrineAnalysis.html
+++ b/js/template/test/UrineAnalysis.html
@@ -3,12 +3,13 @@
 
     <!-- Visual Analysis -->
     <div class="test-section visual">
-        <div class="page-section">
+        <div class="test-section-inner-with-icon">
             <div class="yui3-g-r">
                 <!-- description -->
-                <div class="yui3-u-2-3">
+                <div class="yui3-u-19-24">
                     <div class="yui3-u-c">
                         <div class="test-section-description">
+                            <img class="icon" src="images/test/urine/icon/visual-2x.png" alt="" />
 
                             <h1><span>Visual Analysis</span></h1>
                             <p>We look at the appearance of {{patient.name}}’s urine, as well as investigating.Many factors can affect the color of urine, from medication to diet. Urine is a clear fluid. It can appear cloudy if it contains unexpected cells or crystals.</p>
@@ -49,12 +50,13 @@
 
     <!-- Chemical Analysis -->
     <div class="test-section visual">
-        <div class="page-section">
+        <div class="test-section-inner-with-icon">
             <div class="yui3-g-r">
                 <!-- description -->
-                <div class="yui3-u-2-3">
+                <div class="yui3-u-19-24">
                     <div class="yui3-u-c">
                         <div class="test-section-description">
+                            <img class="icon" src="images/test/urine/icon/chemical-2x.png" alt="" />
 
                             <h1><span>Chemical Analysis</span></h1>
                             <p>By analyzing the chemistry of {{patient.name}}’s urine, we are able to understand organ function more clearly and detect any potential issues much sooner.</p>
